feat: add videos db, list view
